fix integration test analysis